CMake: add an option to build C++ version in addition to C version
Set BUILD_CXX option to ON so that the initial behavior is preserved.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,16 @@ file(STRINGS "configure.ac"
   VERSION_STRING REGEX ${VERSION_REGEX})
 string(REGEX REPLACE ${VERSION_REGEX} "\\1" VERSION_STRING "${VERSION_STRING}")
 
-project(libconfig LANGUAGES C CXX VERSION ${VERSION_STRING})
+project(libconfig LANGUAGES C VERSION ${VERSION_STRING})
 option(BUILD_EXAMPLES "Enable examples" ON)
 option(BUILD_SHARED_LIBS  "Enable shared library" ON)
 option(BUILD_TESTS "Enable tests" ON)
 option(BUILD_FUZZERS "Enable fuzzers" OFF)
+option(BUILD_CXX "Build the C++ library in addition to the C library" ON)
+
+if(BUILD_CXX)
+	enable_language(CXX)
+endif()
 
 set_property(GLOBAL	PROPERTY USE_FOLDERS ON)
 
